--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -1,23 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="container">
 
-    <form action="{{ path('app_auth_login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        {% if error %}
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong>Login error!!</strong> {{ error.messageKey|trans(error.messageData, 'security') }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endif %}
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
 
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
+        <div class="row justify-content-center">
+            <div class="col-4">
+                <form action="{{ path('app_auth_login') }}" method="post">
+                <div class="form-group">
+                    <label for="username">Email address</label>
+                    <input type="email" class="form-control" id="username" name="_username" aria-describedby="emailHelp" placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="_password" placeholder="Password">
+                </div>
+                    <button type="submit" class="btn btn-primary btn-block">ログイン</button>
 
-        <button type="submit">login</button>
-    </form>
+                </form>
+
+
+            </div>
+        </div>
+    </div>
+
+
 {% endblock %}
