--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,11 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         {% endblock %}
+        <style>
+            .container {
+                padding-top: 30px;
+            }
+        </style>
     </head>
     <body>
     <header class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -40,7 +45,8 @@
             </ul>
         </div>
     </header>
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
         {% block javascripts %}
             <script
                     src="https://code.jquery.com/jquery-3.3.1.min.js"
