--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
                     </div>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_top') }}">Create account</a>
+                            <a class="nav-link" href="{{ path('app_signup_form') }}">Create account</a>
                         </li>
 
                     {% endif %}
